# minesweeper2

./: CMakeLists.txt
imgsrc/: button.xcf  icon.xcf  spritesheet.xcf
resources/: minesweeper.icns
src/: button.c  button.h  event.c  main.c  map.c  map.h  render.c  setup.c  text.c  text.h  tile.c  tile.h  ui.c  ui.h  util.c  util.h
